--- a/configuration.properties
+++ b/configuration.properties
@@ -9,3 +9,4 @@ editorUrl=https://editor.datatables.net/
 GMIBankUrl = https://www.gmibank.com/
 GMIBankValidUsername = employee32
 GMIBankValidPassword = team32team32-
+ssn = 248-63-2567
