--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=firefox
 
 amazonUrl=https://www.amazon.com
 techproeducationUrl=https://www.techproeducation.com
@@ -10,3 +10,6 @@ GMIBankUrl = https://www.gmibank.com/
 GMIBankValidUsername = employee32
 GMIBankValidPassword = team32team32-
 ssn = 248-63-2567
+
+homework1 = https://www.books-pwakit.appspot.com/
+homework2 = shop.polymer-project.org
